--- a/app/src/main/res/layout/cardview_layout.xml
+++ b/app/src/main/res/layout/cardview_layout.xml
@@ -2,20 +2,17 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
 
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="fill_parent"
-    android:layout_height="70dp"
-    android:layout_margin="5dp"
+    android:layout_height="80dp"
+    card_view:cardBackgroundColor="@color/cardview_shadow_end_color"
     card_view:cardCornerRadius="1dp"
-    card_view:cardElevation="0dp"
-    card_view:cardMaxElevation="5dp"
-    card_view:contentPadding="5dp">
+    card_view:cardElevation="0dp">
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-
-        >
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/imageview"
@@ -23,30 +20,42 @@
             android:layout_height="60dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:padding="5dp"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_marginStart="8dp"
+            android:padding="2dp"
+            android:src="@mipmap/ic_launcher"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/Apk_Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:layout_toEndOf="@+id/imageview"
             android:text="App Name"
-            android:textColor="#000" />
+            android:textColor="@color/cardview_dark_background"
+            android:textSize="18sp"
+            card_view:layout_constraintStart_toEndOf="@+id/imageview"
+            card_view:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/Apk_Package_Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_toEndOf="@+id/imageview"
-            android:text="pckg @string/app_name"
-            android:textColor="#795548" />
-    </RelativeLayout>
+            android:layout_alignStart="@+id/Apk_Name"
+            android:layout_below="@+id/Apk_Name"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="8dp"
+            android:text="Limit Not Set"
+            android:textColor="@color/common_google_signin_btn_text_light_default"
+            android:textStyle="italic"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintStart_toEndOf="@+id/imageview"
+            card_view:layout_constraintTop_toBottomOf="@+id/Apk_Name" />
+    </android.support.constraint.ConstraintLayout>
+
 </android.support.v7.widget.CardView>
