--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -11,10 +11,10 @@
         android:id="@+id/App_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/get_sarted_btn"
+        android:layout_above="@+id/imageView6"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="66dp"
-        android:text="@string/d_phone"
+        android:layout_marginBottom="23dp"
+        android:text="Minify"
         android:textAppearance="@android:style/TextAppearance.Material.Title"
         android:textSize="36sp" />
 
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/App_name"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="17dp"
         android:fontFamily="sans-serif-condensed"
         android:maxLines="5"
         android:text="@string/app_description_welcome"
@@ -46,8 +47,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/get_sarted_btn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="15dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="62dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/tandc" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:layout_above="@+id/tandc_chkbox"
+        android:layout_alignStart="@+id/get_sarted_btn"
+        android:layout_marginBottom="15dp"
+        app:srcCompat="@drawable/img_start" />
+
+    <TextView
+        android:id="@+id/termsWebsiteLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="120dp"
+        android:text="@string/tnc"
+        android:textColor="@color/cardview_light_background" />
 
 </android.widget.RelativeLayout>
