--- a/app/src/main/res/layout/alert_view.xml
+++ b/app/src/main/res/layout/alert_view.xml
@@ -7,11 +7,11 @@
     android:layout_height="match_parent"
     tools:context="com.rstack.dephone.AlertView">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/alert_card"
             android:layout_width="321dp"
             android:layout_height="0dp"
@@ -72,7 +72,7 @@
                     android:text="TextView" />
             </RelativeLayout>
 
-        </android.support.v7.widget.CardView>
-    </android.support.constraint.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </android.widget.RelativeLayout>
