--- a/app/src/main/res/layout/activity_usage_check.xml
+++ b/app/src/main/res/layout/activity_usage_check.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="615dp"
+    android:layout_height="match_parent"
     android:background="@color/cardview_dark_background"
     android:theme="@style/AppTheme.NoActionBar"
     tools:context="com.rstack.dephone.UsageCheckActivity">
@@ -11,18 +11,38 @@
     <Button
         android:id="@+id/usage_activity_launcher"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
+        android:layout_width="210dp"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="28dp"
         android:background="@android:color/darker_gray"
         android:elevation="2dp"
-        android:text="ok! lets go"
+        android:text="USAGE ACCESS"
+        android:textAlignment="center"
+        android:textColor="@color/cardview_dark_background"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/overlay_access_launcher"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/overlay_access_launcher"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="210dp"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="108dp"
+        android:background="@android:color/darker_gray"
+        android:elevation="2dp"
+        android:text="OVERLAY ACCESS"
         android:textAlignment="center"
         android:textColor="@color/cardview_dark_background"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -50,9 +70,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/usage_activity_launcher"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="24dp"
         android:fontFamily="sans-serif-condensed"
-        android:text="Enable\nApp Usage"
+        android:text="Provide \nBelow Access"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
@@ -60,8 +79,10 @@
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/usage_activity_launcher"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
     <TextView
         android:id="@+id/textView15"
@@ -72,7 +93,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-condensed"
-        android:text='Find "Minify"\nin the Usage Settings'
+        android:text='Find "Minify"\nin the Settings Menu'
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
@@ -104,10 +125,9 @@
         android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="16dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="228dp"
+        android:layout_marginTop="268dp"
+        android:layout_marginEnd="32dp"
         android:background="?android:attr/colorBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -130,27 +150,27 @@
             android:id="@+id/preview_switch"
             android:layout_width="200dp"
             android:layout_height="56dp"
-            android:layout_marginEnd="64dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="64dp"
             android:checked="true"
+            android:clickable="false"
+            android:focusable="false"
             android:text="Minify"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="parent"
-            tools:checked="true"
-            android:clickable="false"
-            android:focusable="false"/>
+            tools:checked="true" />
 
         <TextView
             android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
             android:text="Allowed"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
